# todayi

./: .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
tests/: test_entry.py
todayi/: cli.py  cli_options.py
todayi/core/: entry.py
