[tool.poetry]
name = "todayi"
version = "0.0.1"
description = "A habit tracker"
authors = ["Aravind Koneru <aravind.b.koneru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
